tests/integration/snapshots/integration__snapshot_cli_test__cli_help_usage.snap
---
source: tests/integration/snapshot_cli_test.rs
expression: output
---
=== agr usage --help ===
Exit code: 0

--- stdout ---
Display storage statistics for recorded sessions.

Shows total size, disk usage percentage, session count by agent,
and age of the oldest recording.

EXAMPLE:
    agr usage

OUTPUT:
    Agent Sessions: 1.2 GB (0.5% of disk)
       Sessions: 23 total (claude: 15, codex: 8)
       Oldest: 2025-01-01 (20 days ago)

Usage: agr usage

Options:
  -h, --help
          Print help (see a summary with '-h')
--- stderr ---
